updated express template
